--- a/.gitignore
+++ b/.gitignore
@@ -292,6 +292,7 @@ cython_debug/
 
 .DS_Store
 
+.idea/
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
